--- a/style.css
+++ b/style.css
@@ -17,6 +17,5 @@
   
   h2 {
     color: hotpink;
-    font-size: 60px;
-    background-color: #56f442;
+    font-family: 'Times New Roman', Times, serif;
   }
