--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,21 @@
   table {
     margin-left: auto;
     margin-right: auto;
-    border: 5px solid silver;
+    border: 5px solid palevioletred;
   }
 
   td {
     color: black;
     text-align: center; 
     background-color: lightpink;
-    border: 1px solid silver;
+    border: 1px solid palevioletred;
   }
 
   th {
     color: black;
     text-align: center; 
     background-color: hotpink;
-    border: 1px solid silver;
+    border: 1px solid palevioletred;
   }
   
   .img {
