change background color

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
   body {
-    background-color: black;
+    background-color: mistyrose;
     color: hotpink;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
